test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-shared-from-oknil-unmanaged.good
init-field-dflt-nonnil-shared-from-oknil-unmanaged.chpl:11: error: default-initializing a field with a non-nilable type shared MyClass from an instance of nilable unmanaged MyClass?
